--- a/todo application/sqlpage/templates/spreadsheet.handlebars
+++ b/todo application/sqlpage/templates/spreadsheet.handlebars
@@ -1,12 +1,11 @@
-<div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true">
+<div class="modal fade" id="errorModal_{{@component_index}}" tabindex="-1" aria-labelledby="errorModalLabel_{{@component_index}}" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="errorModalLabel">Error</h5>
+        <h5 class="modal-title">Cell Update</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body" id="errorModalBody">
-      </div>
+      <div class="modal-body"></div>
     </div>
   </div>
 </div>
@@ -32,6 +31,7 @@
 </div>
  
 <script nonce="{{@csp_nonce}}">
+  const resp_modal = document.getElementById('errorModal_{{@component_index}}');
     {{#if update_link}}
       async function onUpdate(x, y, value, custom) {
         const relative_url = {{{stringify update_link}}};
@@ -49,8 +49,8 @@
         let resp_html = await r.text();
         if (r.status !== 200 && !resp_html) resp_html = resp.statusText;
         if (resp_html) {
-          document.getElementById('errorModalBody').innerHTML = resp_html;
-          new bootstrap.Modal(document.getElementById('errorModal')).show();
+          resp_modal.querySelector('.modal-body').innerHTML = resp_html;
+          new bootstrap.Modal(resp_modal).show();
         }
       }
     {{else}}
